--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,18 @@
   <groupId>com.qa</groupId>
   <artifactId>Account-Application</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
+  <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.json/json -->
+<dependency>
+    <groupId>org.json</groupId>
+    <artifactId>json</artifactId>
+    <version>20180813</version>
+</dependency>
+  
+  </dependencies>
+  
+  
+  
+  
 </project>
