--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,12 @@
     <artifactId>json</artifactId>
     <version>20180813</version>
 </dependency>
-  
+
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  	</dependency>
   </dependencies>
   
   
